fix overflow issue

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -34,6 +34,10 @@
   opacity: 0.7;
 }
 
+#diy-icon {
+  
+}
+
 .navbar-icon:hover {
   cursor: pointer;
   animation: buttonHover 1s;
@@ -60,9 +64,9 @@
   grid-template-columns: 2% 5% 5% 5% 63% 15% 5%;
   grid-template-rows: 40px;
   grid-area: navbar;
-  padding-top: 10px;
+  margin-top: 1px;
   overflow: hidden;
-  padding-bottom: 10px;
+  margin-bottom: 2px;
   width: 100%;
 }
 
